# winereg

./: Cargo.toml  README.md
tests/: basic_test.rs  registry_dsl_test.rs  registry_file_io_test.rs  registry_patcher_test.rs  registry_text_diff_test.rs
tests/resources/: system.reg  user.reg  userdef.reg  vcredist.rph
