[package]
name = "winereg"
version = "0.1.0"
edition = "2024"
authors = ["asLody"]
description = "Rust library for parsing, writing, diffing, patching, and scripting Wine/Windows registry files."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/asLody/winereg"
keywords = ["registry", "wine", "windows", "diff", "patch"]
categories = ["encoding", "parser-implementations"]
exclude = [
    "tests/resources/*",
    "refer/**",
    "terminals/**",
]

[lib]
name = "winereg"

[dependencies]
anyhow = "1.0.100"
once_cell = "1.21.3"
regex = "1.12.2"
thiserror = "1.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
